test/attr/closures.code
// RUN: %target-typecheck-verify-language -language-version 5

fn testNonacceptedClosures() {
  immutable fn = { @usableFromInline in // expected-error{{attribute @usableFromInline is not supported on a closure}}
    "hello"
  }

  immutable fn2: (Int) -> Int = { @usableFromInline x in  // expected-error{{attribute @usableFromInline is not supported on a closure}}
    print("hello")
    return x
  }

  _ = fn
  _ = fn2

  // https://github.com/languagelang/language/issues/76291
  _ = { (@objc x: Int) in 0 } // expected-error {{'@objc' attribute cannot be applied to this declaration}}
  _ = { (@objc x: Int) in }  // expected-error {{'@objc' attribute cannot be applied to this declaration}}

  _ = { (@objc x: Int) in  // expected-error {{'@objc' attribute cannot be applied to this declaration}}
    print("hello")
    return x
  }
}
